build/log/idf_py_stderr_output_40674
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:493:9: warning: "BUTTON_VOLUP_ID" redefined
  493 | #define BUTTON_VOLUP_ID           0
      |         ^~~~~~~~~~~~~~~
In file included from /Users/promex04/esp/esp-adf/components/audio_board/lyrat_mini_v1_1/board.h:29,
                 from /Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:25:
/Users/promex04/esp/esp-adf/components/audio_board/lyrat_mini_v1_1/board_def.h:89:9: note: this is the location of the previous definition
   89 | #define BUTTON_VOLUP_ID           (0)
      |         ^~~~~~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:494:9: warning: "BUTTON_VOLDOWN_ID" redefined
  494 | #define BUTTON_VOLDOWN_ID         1
      |         ^~~~~~~~~~~~~~~~~
/Users/promex04/esp/esp-adf/components/audio_board/lyrat_mini_v1_1/board_def.h:90:9: note: this is the location of the previous definition
   90 | #define BUTTON_VOLDOWN_ID         (1)
      |         ^~~~~~~~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'input_key_service_cb':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:500:65: error: 'PERIPH_BUTTON_PRESSED' undeclared (first use in this function)
  500 |     if (event->source_type == PERIPH_ID_BUTTON && event->cmd == PERIPH_BUTTON_PRESSED) {
      |                                                                 ^~~~~~~~~~~~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:500:65: note: each undeclared identifier is reported only once for each function it appears in
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'app_main':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:625:26: error: redefinition of 'board_handle'
  625 |     audio_board_handle_t board_handle = audio_board_get_handle(); // Get global handle
      |                          ^~~~~~~~~~~~
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:545:26: note: previous definition of 'board_handle' with type 'audio_board_handle_t' {aka 'struct audio_board_handle *'}
  545 |     audio_board_handle_t board_handle = audio_board_init();
      |                          ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main_ws.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
